crates/compiler/parser/tests/snapshots/types::deeply_nested_types.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test(x: ((felt*, felt), (felt, felt*))*) { }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [
                    Parameter {
                        name: Spanned(
                            "x",
                            10..11,
                        ),
                        type_expr: Pointer(
                            Tuple(
                                [
                                    Tuple(
                                        [
                                            Pointer(
                                                Named(
                                                    "felt",
                                                ),
                                            ),
                                            Named(
                                                "felt",
                                            ),
                                        ],
                                    ),
                                    Tuple(
                                        [
                                            Named(
                                                "felt",
                                            ),
                                            Pointer(
                                                Named(
                                                    "felt",
                                                ),
                                            ),
                                        ],
                                    ),
                                ],
                            ),
                        ),
                    },
                ],
                return_type: Tuple(
                    [],
                ),
                body: [],
            },
            0..49,
        ),
    ),
]
