crates/compiler/parser/tests/snapshots/types::nested_tuple_type.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test(x: ((felt, felt), felt)) { }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [
                    Parameter {
                        name: Spanned(
                            "x",
                            8..9,
                        ),
                        type_expr: Spanned(
                            Tuple(
                                [
                                    Spanned(
                                        Tuple(
                                            [
                                                Spanned(
                                                    Named(
                                                        Spanned(
                                                            Felt,
                                                            13..17,
                                                        ),
                                                    ),
                                                    13..17,
                                                ),
                                                Spanned(
                                                    Named(
                                                        Spanned(
                                                            Felt,
                                                            19..23,
                                                        ),
                                                    ),
                                                    19..23,
                                                ),
                                            ],
                                        ),
                                        12..24,
                                    ),
                                    Spanned(
                                        Named(
                                            Spanned(
                                                Felt,
                                                26..30,
                                            ),
                                        ),
                                        26..30,
                                    ),
                                ],
                            ),
                            11..31,
                        ),
                    },
                ],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [],
            },
            0..36,
        ),
    ),
]
