crates/compiler/parser/tests/snapshots/types::pointer_to_custom_type.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test(x: MyStruct*) { }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [
                    Parameter {
                        name: Spanned(
                            "x",
                            10..11,
                        ),
                        type_expr: Pointer(
                            Named(
                                "MyStruct",
                            ),
                        ),
                    },
                ],
                return_type: Tuple(
                    [],
                ),
                body: [],
            },
            0..27,
        ),
    ),
]
