crates/compiler/parser/tests/snapshots/types::pointer_to_tuple.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test(x: (felt, felt)*) { }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [
                    Parameter {
                        name: Spanned(
                            "x",
                            10..11,
                        ),
                        type_expr: Pointer(
                            Tuple(
                                [
                                    Named(
                                        "felt",
                                    ),
                                    Named(
                                        "felt",
                                    ),
                                ],
                            ),
                        ),
                    },
                ],
                return_type: None,
                body: [],
            },
            0..31,
        ),
    ),
]
