crates/compiler/parser/tests/snapshots/types::tuple_of_pointers.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test(x: (felt*, felt*)) { }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [
                    Parameter {
                        name: Spanned(
                            "x",
                            8..9,
                        ),
                        type_expr: Tuple(
                            [
                                Pointer(
                                    Named(
                                        Felt,
                                    ),
                                ),
                                Pointer(
                                    Named(
                                        Felt,
                                    ),
                                ),
                            ],
                        ),
                    },
                ],
                return_type: Tuple(
                    [],
                ),
                body: [],
            },
            0..30,
        ),
    ),
]
